# djangox

./: Dockerfile  Makefile  README.md  docker-compose.yml  env.txt  pyproject.toml
accounts/: admin.py  models.py
accounts/tests/: conftest.py
config/: settings.py
